= 3.4.12
- Workaround for counter_cache bug on polymorphic associations on rails4
- Improve use of CRUD actions without list action

= 3.4.11
- Fix refresh-link on main form (not subform)
- Workaround for counter_cache bug on rails4 (https://github.com/rails/rails/pull/14849)
- Support create form on nested scaffolds on through association, if through reflection association is included in create form
- Remove ruby 1.8 support
- Fix :index member route (list one item), broken on 3.4.9

= 3.4.10
- singular associations on subform are always created, in other case it's not possible to enable a checkbox without filling text fields.
- process_action_link_action checks security for crud_type and action now
- fix record for add_existing_form, so it can be used on options_for_association_conditions
- :type option for action_link not needed anymore if added with action_links.member.add, it was redundant

= 3.4.9
- update parent data when changing a column in subform of edit form, so parent has data from form as it works in new form
- use :only and :except options from resource line on as_routes and as_association_routes, so activescaffold actions can be selected
- focus first element of subform record added
- changes on destroy:
  - destroy.js.erb uses main_path_to_return to get url to reload if page empty
  - delete_record_row can be called without url
- messages_id and form_selector on create, update and destroy JS views can be overrided when calling render :super
- element_row_id on list_record partial can be overrided when calling render :super with :row_id local

= 3.4.8
- set parent data when adding new record on subform of a create form on a embedded or nested list
- trigger ajax:* events on ajax call to render_field

= 3.4.7
- sorting by primary key added by default only for postgres, on mysql it will avoid using index to sort (you can see using filesort on explain), slowdown sorting
- fix set_parent on rails 3.2 with attr_accessible